--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 Markdown==3.8
+psycopg2-binary==2.9.10
 pycodestyle==2.13.0
 PyJWT==2.9.0
 PyYAML==6.0.2
