--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,15 @@ services:
     restart: always
     shm_size: 128mb
     environment:
-      POSTGRES_DB: tm_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: ${POSTGRES_NAME}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    env_file:
+      - .env
 
   api:
     build: ./
@@ -22,12 +24,17 @@ services:
     depends_on:
       - postgres_db
     environment:
-      DATABASE_HOST: postgres
-      DATABASE_NAME: tm_db
-      DATABASE_PASSWORD: admin
-      DATABASE_USERNAME: postgres
-      DATABASE_PORT: "5432"
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS}
+      DEBUG: ${DEBUG}
+      DATABASE_HOST: ${POSTGRES_HOST}
+      DATABASE_NAME: ${POSTGRES_NAME}
+      DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
+      DATABASE_USERNAME: ${POSTGRES_USER}
+      DATABASE_PORT: ${POSTGRES_PORT}
     volumes:
-      - ./:/app
+      - ./:/api
+    env_file:
+      - .env
 volumes:
   postgres_data:
