--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+amqp==5.3.1
 asgiref==3.8.1
 attrs==25.3.0
 autopep8==2.3.2
+billiard==4.2.1
+celery==5.5.2
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
 Django==5.2
 django-extensions==4.1
 django-filter==25.1
@@ -12,14 +20,21 @@ gprof2dot==2025.4.14
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
+kombu==5.5.3
 Markdown==3.8
+prompt_toolkit==3.0.51
 psycopg2-binary==2.9.10
 pycodestyle==2.13.0
 PyJWT==2.9.0
+python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 referencing==0.36.2
 rpds-py==0.24.0
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.13.2
 tzdata==2025.2
 uritemplate==4.1.1
+vine==5.1.0
+watchdog==6.0.0
+wcwidth==0.2.13
